--- a/css/conozcanos.css
+++ b/css/conozcanos.css
@@ -18,7 +18,7 @@ header {
 }
  
 header nav {
-	background:#7daecc;
+	background:#95d6ff;
 	z-index:1000;
 	max-width: 1000px;
 	width:100%;
@@ -52,7 +52,7 @@ header nav ul li:hover .children {
  
 header nav ul li .children {
 	display: none;
-	background:#011826;
+	background:#98c6d4;
 	position: absolute;
 	width: 150%;
 	z-index:1000;
@@ -61,27 +61,13 @@ header nav ul li .children {
 header nav ul li .children li {
 	display:block;
 	overflow: hidden;
-	border-bottom: 1px solid rgba(255,255,255,.5);
+	border-bottom: 1px solid rgb(255, 255, 255);
 }
  
 header nav ul li .children li a {
 	display: block;
 }
  
-header nav ul li .children li a span {
-	float: right;
-	position: relative;
-	top:3px;
-	margin-right:0;
-	margin-left:10px;
-}
- 
-header nav ul li .caret {
-	position: relative;
-	top:3px;
-	margin-left:10px;
-	margin-right:0px;
-}
  
 @media screen and (max-width: 800px) {
 	body {
@@ -93,16 +79,14 @@ header nav ul li .caret {
 		width:100%;
 		position: fixed;
 		top:0;
-		background:#E6344A;
+		background:#95d6ff;;
 	}
  
 	.menu_bar .btn-menu {
 		display: block;
-		padding: 20px;
-		color: #fff;
+		padding: 10px;
 		overflow: hidden;
 		font-size: 25px;
-		font-weight: bold;
 		text-decoration: none;
 	}
  
@@ -112,7 +96,7 @@ header nav ul li .caret {
 		position: fixed;
 		right:100%;
 		margin: 0;
-		overflow: scroll;
+		overflow: scroll ;
 	}
  
 	header nav ul li {
