--- a/css/conozcanos.css
+++ b/css/conozcanos.css
@@ -9,12 +9,14 @@
 .contenedor{
     width: 80%;
     margin: auto;
-    overflow: hidden;
+	overflow: hidden;
+	
 }
+
 #boletin{
     padding: 25px;
     color: #fff;
-    background: #24282b;
+    background-color: #98c6d4;
 
 }
 #boletin h1{
@@ -31,6 +33,14 @@
    height: 25px;
    width: 250px;
     
+}
+.boton1{
+    height: 23px;
+    background: rgb(30, 67, 110);
+    border: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #fff;
 }
  
 body {background:#FEFEFE;}
@@ -93,7 +103,27 @@ header nav ul li .children li {
 header nav ul li .children li a {
 	display: block;
 }
- 
+
+.top {
+    position: relative;
+	background: #F5F5F5;
+	
+}
+
+.row {
+	max-width:960px;
+	margin: 0 auto;
+	}
+.raw{
+	
+	display: flex;
+	justify-content: right;
+	align-content: center;
+	text-align: justify;
+	
+}
+
+
 
 
 
