--- a/css/convenios.css
+++ b/css/convenios.css
@@ -187,28 +187,25 @@ div.transbox p {
 }
 
 footer {
-    width: 100%;
-    padding: 30px 0%;
-    background: rgba(125, 174, 204);
-    overflow: auto;
+	background:#bcc8ce;
+	width: 100%;
+	text-align: center;
+	padding:10px;
+ 
+	/* Flexbox */
+	display: flex;
+	justify-content:center;
 }
-
-footer div {
-    width: 80%;
-    margin: 0 auto;
-    min-width: 800px;
+ 
+footer .social {
+	background:#bcc8ce;
 }
-
-footer img {
-    margin-right: 20px;
-    float: left;
+ 
+footer .social a {
+	text-decoration: none;
+	padding:10px;
+	display: inline-block;
 }
-
-footer p {
-    float: left;
-    padding-top: 12px;
-}
-
 .p1{
     
     color: #4C4C4C;
