--- a/css/conozcanos.css
+++ b/css/conozcanos.css
@@ -3,7 +3,8 @@
 	margin:0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-    box-sizing: border-box;
+	box-sizing: border-box;
+	
     
 }
 .contenedor{
@@ -41,6 +42,9 @@
     padding-left: 20px;
     padding-right: 20px;
     color: #fff;
+}
+:focus{
+	outline: none;
 }
  
 body {background:#FEFEFE;}
@@ -245,3 +249,140 @@ article{
 	padding: 10px;
 
 }
+body #contacto{
+    background: #aaddee;
+    font-family: 'Open sans';
+}
+.form_wrap{
+	width: 1050px;
+	height: 530px;
+	margin: 50px auto;
+
+	display: flex;
+
+	background: #fff;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 0px 0px 20px rgba(0, 0, 0,0.2);
+
+}
+.contact_info::before{
+	content: '';
+	width: 100%;
+	height: 100%;
+	position:absolute;
+	top: 0;
+	left: 0;
+
+	background: #4091EC;
+	opacity: 0;
+
+
+}
+.contact_info{
+	width: 38%;
+	position: relative;
+
+	display: flex;
+	flex-direction:  column;
+	align-items: center;
+	justify-content: center;
+
+	background-image: url(../OPG-8.jpg);
+	background-size: cover;
+	background-position: center center;
+}
+
+.info_title,
+.info_items{
+	position: relative;
+	z-index:2;
+	color: #fff;
+}
+.info_title{
+	margin-bottom: 60px;
+}
+.info_title span{
+	font-size: 100px;
+	display: block;
+	text-align: center;
+	margin-bottom: 15px;
+
+}
+.info_title h2{
+	font-size: 35px;
+	text-align: center;
+}
+.info_items p{
+	display: flex;
+	align-items: center;
+
+	font-size: 16px;
+	font-weight: 600;
+	margin-bottom: 10px;
+}
+.info_items p:nth-child(1) span{
+	font-size: 30px;
+	margin-right: 5px;
+}
+.info_items p:nth-child(2) span{
+	font-size: 50px;
+	margin-right: 10px;
+	margin-left: 4px;
+}
+form.form_contact{
+	width: 62%;
+	padding: 30px 40px;
+}
+form.form_contact h2{
+	font-size: 25px;
+	font-weight: 600;
+	color: #303030;
+
+	margin-bottom: 30px;
+}
+form.form_contact .user_info{
+	display: flex;
+	flex-direction: column;
+}
+form.form_contact label{
+	font-weight: 600;
+}
+form.form_contact input,
+form.form_contact textarea {
+	width: 100%;
+	padding: 8px 0px 5px; 
+	margin-bottom: 20px;
+
+	border: none;
+	border-bottom: 2px solid #D1D1D1;
+
+	font-family: 'Open sans';
+	color: #5A5A5A;
+	font-size: 14px;
+	font-weight: 400;
+
+}
+form.form_contact textarea{
+	max-width: 100%;
+	max-width: 100%;
+	max-height: 90%;
+	
+}
+form.form_contact input[type= "button"]{
+	width: 180px;
+	backgraund: rgb(118, 122, 128);
+	padding: 10px;
+	border: none;
+	border-radius: 25px;
+	
+	align-self: flex-end;
+	color-family: 'Open sans';
+	font-size: 16px;
+	font-weight: 600;
+	cursor: pointer;
+}
+form.form_contact input[type= "button"]:hover{
+	background: #3371B6;
+}
+
