--- a/css/conozcanos.css
+++ b/css/conozcanos.css
@@ -274,8 +274,8 @@ body #contacto{
 	top: 0;
 	left: 0;
 
-	background: #4091EC;
-	opacity: 0;
+	background: rgb(90, 206, 214);
+	opacity: 0.1;
 
 
 }
@@ -337,7 +337,7 @@ form.form_contact{
 form.form_contact h2{
 	font-size: 25px;
 	font-weight: 600;
-	color: #303030;
+	color: #d4cdcd;
 
 	margin-bottom: 30px;
 }
@@ -358,7 +358,7 @@ form.form_contact textarea {
 	border-bottom: 2px solid #D1D1D1;
 
 	font-family: 'Open sans';
-	color: #5A5A5A;
+	color: rgb(255, 255, 255);
 	font-size: 14px;
 	font-weight: 400;
 
@@ -371,18 +371,18 @@ form.form_contact textarea{
 }
 form.form_contact input[type= "button"]{
 	width: 180px;
-	backgraund: rgb(118, 122, 128);
+	background: rgb(157, 160, 163);
 	padding: 10px;
 	border: none;
 	border-radius: 25px;
 	
 	align-self: flex-end;
-	color-family: 'Open sans';
+	font-family: 'Open sans';
 	font-size: 16px;
 	font-weight: 600;
 	cursor: pointer;
 }
 form.form_contact input[type= "button"]:hover{
-	background: #3371B6;
+	background: rgb(30, 48, 70);
 }
 
