--- a/css/estilo.css
+++ b/css/estilo.css
@@ -19,10 +19,10 @@ body{
     top: 0;
     left: 0;
     margin: 0;
-    padding: 0;
+    padding: 20%;
     width: 100%;
     height: 80px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.795);
 
 }
 
