--- a/css/conozcanos.css
+++ b/css/conozcanos.css
@@ -210,18 +210,45 @@ ul #nuestroEquipo li{
 
 }
 aside {
-	background:#e2d8d8;
-	padding:0px;
-	margin: 0px 0px 0px 0px;
-	width: auto;
-
+	float: none;
+	position: relative;
+	background:#f8f8f8;
+	margin: 30px;
+	border-bottom:2px solid #98c6d4 ;
+	display: block;
+	box-sizing: border-box;
+	text-decoration:none;
 
 }
+aside .top{
+	font-style: italic;
+
+}
+aside h5{
+	margin: 5px;
+	font-style: normal;
+	font-family:montserrat; 
+	display:block;
+	border-bottom:3px solid rgb(0, 19, 22);
+}
+aside a{
+	padding: 5px;
+	width: 38%;
+	height: -110px;
+	position: relative;
+	display:block;
+	border-bottom:1px solid rgb(16, 50, 56);
+}
+
+
  #lateral {
-	margin: 11px;
-	background: #d1d4d6;
+	margin: 90px 0px 0px -140px;
+	background: #f0f2f3;
 	padding-left: 10% ;
+	
 }
+
+
 
 .p1{
     
