--- a/css/tratamientos.css
+++ b/css/tratamientos.css
@@ -3,8 +3,43 @@
 	margin:0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
-    box-sizing: border-box;
+	box-sizing: border-box;
+	
     
+}
+
+
+#boletin{
+    padding: 25px;
+    color: #fff;
+    background-color: #98c6d4;
+
+}
+#boletin h1{
+    float: left;
+    
+}
+#boletin form{
+    float: right;
+    margin-top: 25px;
+    
+}
+#boletin input[type="email"]{
+    padding: 4px;
+   height: 25px;
+   width: 250px;
+    
+}
+.boton1{
+    height: 23px;
+    background: rgb(30, 67, 110);
+    border: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: #fff;
+}
+:focus{
+	outline: none;
 }
  
 body {background:#FEFEFE;}
@@ -18,7 +53,7 @@ header {
 }
  
 header nav {
-	background: #99d3f8;
+	background:#95d6ff;
 	z-index:1000;
 	max-width: 1000px;
 	width:100%;
@@ -67,22 +102,34 @@ header nav ul li .children li {
 header nav ul li .children li a {
 	display: block;
 }
- 
-header nav ul li .children li a span {
-	float: right;
-	position: relative;
-	top:3px;
-	margin-right:0;
-	margin-left:10px;
+
+.top {
+    position: relative;
+	background: #F5F5F5;
+	
 }
- 
-header nav ul li .caret {
-	position: relative;
-	top:3px;
-	margin-left:10px;
-	margin-right:0px;
+
+.row {
+	max-width:960px;
+	margin: 0 auto;
+	}
+.raw{
+	
+	display: flex;
+	justify-content: right;
+	align-content: center;
+	text-align: justify;
+	display: flex;
+	justify-content: flex-end;
+	
 }
- 
+article .row{
+	position: relative;
+}
+
+
+
+
 @media screen and (max-width: 800px) {
 	body {
 		padding-top:80px;
@@ -93,16 +140,14 @@ header nav ul li .caret {
 		width:100%;
 		position: fixed;
 		top:0;
-		background:#E6344A;
+		background:#95d6ff;;
 	}
  
 	.menu_bar .btn-menu {
 		display: block;
-		padding: 20px;
-		color: #fff;
+		padding: 10px;
 		overflow: hidden;
 		font-size: 25px;
-		font-weight: bold;
 		text-decoration: none;
 	}
  
@@ -112,12 +157,12 @@ header nav ul li .caret {
 		position: fixed;
 		right:100%;
 		margin: 0;
-		overflow: scroll;
+		overflow: scroll ;
 	}
  
 	header nav ul li {
 		display: block;
-		border-bottom:1px solid rgba(255,255,255,.5);
+		border-bottom:1px solid rgb(255, 255, 255);
 	}
  
 	header nav ul li a {
@@ -141,56 +186,265 @@ header nav ul li .caret {
 		float: left;
 	}
 }
-.oscuro{
-    padding: 15px;
-    background-color: #35424a;
-    color: #fff;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
+
 article #main-col{
     float: left;
-    width: 65%;
+    width: 80%;
     
 }
-aside {
-	background:#c0b4b46c;
-	padding:20px;
-	/*FLEX*/
-	
-	flex:0 0 300px;
- 
-	display: flex;
-	
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
+ul #nuestroEquipo li{
+	list-style: none;
+	padding: 20px;
+	border: 1px solid #4C4C4C;
+	margin-bottom: 5px;
+	background-color: #35424a;
 }
+
+.oscuro{
+	padding: 0px;
+	
+	background: #99d3f8;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-size: 10px;
+	color: #fff;
+
+}
+aside {
+	float: none;
+	position: relative;
+	background:#f8f8f8;
+	margin: 30px;
+	border-bottom:2px solid #98c6d4 ;
+	display: block;
+	box-sizing: border-box;
+	text-decoration:none;
+
+}
+aside .top{
+	font-style: italic;
+
+}
+aside h5{
+	margin: 5px;
+	font-style: normal;
+	font-family:montserrat; 
+	display:block;
+	border-bottom:3px solid rgb(0, 19, 22);
+}
+aside a{
+	padding: 5px;
+	width: 38%;
+	height: -110px;
+	position: relative;
+	display:block;
+	border-bottom:1px solid rgb(16, 50, 56);
+}
+
+
+ #lateral {
+	margin: 90px 0px 0px -140px;
+	background: #f0f2f3;
+	padding-left: 10% ;
+	
+}
+
+
+
 .p1{
     
     color: #4C4C4C;
-    padding: 0 0 0 42px;
-    margin: 0 0 12px;
-}
-
-.flex{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-self: center;
-    align-items: flex-end;
-    justify-content: center;
+    padding: 0 0 0 30px;
+	margin: 0 0 16px;
+	font-size: 20px;
+	font-family: monserrat;
 
 }
 
-.arriba{
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    align-self: center;
-    align-items: flex-end;
-    justify-content: center;
-    padding-top: 6%;
+footer {
+	background:#bcc8ce;
+	width: 100%;
+	text-align: center;
+	padding:10px;
+ 
+	/* Flexbox */
+	display: flex;
+	justify-content:center;
 }
+ 
+footer .social {
+	background:#bcc8ce;
+}
+ 
+footer .social a {
+	text-decoration: none;
+	padding:10px;
+	display: inline-block;
+}
+article{
+	padding: 10px;
+
+}
+body #contacto{
+    background: #aaddee;
+    font-family: 'Open sans';
+}
+.form_wrap{
+	width: 1050px;
+	height: 530px;
+	margin: 50px auto;
+
+	display: flex;
+
+	background: #fff;
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 0px 0px 20px rgba(0, 0, 0,0.2);
+
+}
+.contact_info::before{
+	content: '';
+	width: 100%;
+	height: 100%;
+	position:absolute;
+	top: 0;
+	left: 0;
+
+	background: rgb(90, 206, 214);
+	opacity: 0.1;
+
+
+}
+.contact_info{
+	width: 38%;
+	position: relative;
+
+	display: flex;
+	flex-direction:  column;
+	align-items: center;
+	justify-content: center;
+
+	background-image: url(../OPG-8.jpg);
+	background-size: cover;
+	background-position: center center;
+}
+
+.info_title,
+.info_items{
+	position: relative;
+	z-index:2;
+	color: #fff;
+}
+.info_title{
+	margin-bottom: 60px;
+}
+.info_title span{
+	font-size: 100px;
+	display: block;
+	text-align: center;
+	margin-bottom: 15px;
+
+}
+.info_title h2{
+	font-size: 35px;
+	text-align: center;
+}
+.info_items p{
+	display: flex;
+	align-items: center;
+
+	font-size: 16px;
+	font-weight: 600;
+	margin-bottom: 10px;
+}
+.info_items p:nth-child(1) span{
+	font-size: 30px;
+	margin-right: 5px;
+}
+.info_items p:nth-child(2) span{
+	font-size: 50px;
+	margin-right: 10px;
+	margin-left: 4px;
+}
+form.form_contact{
+	width: 62%;
+	padding: 30px 40px;
+}
+form.form_contact h2{
+	font-size: 25px;
+	font-weight: 600;
+	color: #d4cdcd;
+
+	margin-bottom: 30px;
+}
+form.form_contact .user_info{
+	display: flex;
+	flex-direction: column;
+}
+form.form_contact label{
+	font-weight: 600;
+}
+form.form_contact input,
+form.form_contact textarea {
+	width: 100%;
+	padding: 8px 0px 5px; 
+	margin-bottom: 20px;
+
+	border: none;
+	border-bottom: 2px solid #D1D1D1;
+
+	font-family: 'Open sans';
+	color: rgb(255, 255, 255);
+	font-size: 14px;
+	font-weight: 400;
+
+}
+form.form_contact textarea{
+	max-width: 100%;
+	max-width: 100%;
+	max-height: 90%;
+	
+}
+form.form_contact input[type= "button"]{
+	width: 180px;
+	background: rgb(157, 160, 163);
+	padding: 10px;
+	border: none;
+	border-radius: 25px;
+	
+	align-self: flex-end;
+	font-family: 'Open sans';
+	font-size: 16px;
+	font-weight: 600;
+	cursor: pointer;
+}
+form.form_contact input[type= "button"]:hover{
+	background: rgb(30, 48, 70);
+}
+
+.fakeimg {
+	height: 200px;
+	background: #aaa;
+}
+#centro{
+	background: #fff;
+	text-align: left;
+	padding-left: 27.8% ;
+	width:100%;
+	margin:auto;
+ 
+	display:flex;
+	flex-flow:row wrap;
+}
+.light{
+font-size: 10%;
+font-family: 'Times New Roman', Times, serif;
+color: rgb(255, 253, 253);
+padding: 30px 30px;
+margin: 40px -340px 10px -200px;
+background: #d2d3d4;
+
+}
+
 
 #contenedor {
     
@@ -215,25 +469,4 @@ aside {
     color:#000000;
     margin: 20px;
 
-}
-
-footer {
-	background:#bcc8ce;
-	width: 100%;
-	text-align: center;
-	padding:10px;
- 
-	/* Flexbox */
-	display: flex;
-	justify-content:center;
-}
- 
-footer .social {
-	background:#bcc8ce;
-}
- 
-footer .social a {
-	text-decoration: none;
-	padding:10px;
-	display: inline-block;
 }
