--- a/css/giras.css
+++ b/css/giras.css
@@ -444,3 +444,10 @@ margin: 40px -340px 10px -200px;
 background: #d2d3d4;
 
 }
+
+.giras{
+    margin: 5%;
+    font-weight: bold;
+    color: #000000;
+    padding-top: 2%;
+}
