--- a/css/conozcanos.css
+++ b/css/conozcanos.css
@@ -433,7 +433,7 @@ form.form_contact input[type= "button"]:hover{
 }
 #centro{
 	background: #fff;
-	text-align: left;
+	text-align: center;
 	padding-left: 27.8% ;
 	width:100%;
 	margin:auto;
